--- a/dist.ini
+++ b/dist.ini
@@ -34,22 +34,31 @@ order_by = name
 exclude_filename = README
 exclude_filename = README.mkdn
 exclude_filename = README.pod
+exclude_filename = CONTRIBUTING.pod
 exclude_filename = LICENSE
+exclude_filename = Makefile.PL
 include_dotfiles = 1
 
 [License / @Author::KENTNL/License]
 
 [MetaJSON / @Author::KENTNL/MetaJSON]
 
-[MetaYAML / @Author::KENTNL/MetaYAML]
+[MetaYAML::Minimal / @Author::KENTNL/MetaYAML::Minimal]
 
 [Manifest / @Author::KENTNL/Manifest]
 
 [Author::KENTNL::TravisCI / @Author::KENTNL/Author::KENTNL::TravisCI]
 :version = 0.001002
 
+[Author::KENTNL::CONTRIBUTING / @Author::KENTNL/Author::KENTNL::CONTRIBUTING]
+-location = root
+-phase = build
+:version = 0.001003
+document_version = 0.1
+
 [CopyFilesFromBuild / @Author::KENTNL/CopyXBuild]
 copy = LICENSE
+copy = Makefile.PL
 
 [MetaTests / @Author::KENTNL/MetaTests]
 
@@ -85,7 +94,7 @@ replacer = replace_with_blank
 -phase = develop
 -type = suggests
 Dist::Zilla::App::Command::bakeini = 0.001000
-Dist::Zilla::PluginBundle::Author::KENTNL = 2.024001
+Dist::Zilla::PluginBundle::Author::KENTNL = 2.025002
 
 [Prereqs::AuthorDeps / @Author::KENTNL/Prereqs::AuthorDeps]
 
@@ -129,6 +138,7 @@ tag_format = %v-source
 
 [Git::NextRelease / @Author::KENTNL/Git::NextRelease]
 :version = 0.004000
+default_branch = master
 format = %v %{yyyy-MM-dd'T'HH:mm:ss}dZ %h
 time_zone = UTC
 
@@ -169,6 +179,8 @@ applyto_phase = develop
 modules = Dist::Zilla::PluginBundle::Author::KENTNL
 modules = Dist::Zilla::App::Command::bakeini
 
+[RemovePrereqs::Provided / @Author::KENTNL/RemovePrereqs::Provided]
+
 [Prereqs / @Author::KENTNL/::Role::BundleDeps]
 ;version_major     = 0
 ;version_minor     = 1
@@ -180,6 +192,7 @@ modules = Dist::Zilla::App::Command::bakeini
 ;version_rel_time_zone = Pacific/Auckland
 -phase = develop
 -relationship = requires
+Dist::Zilla::Plugin::Author::KENTNL::CONTRIBUTING = 0.001003
 Dist::Zilla::Plugin::Author::KENTNL::RecommendFixes = 0.004002
 Dist::Zilla::Plugin::Author::KENTNL::TravisCI = 0.001002
 Dist::Zilla::Plugin::Authority = 1.006
@@ -204,7 +217,7 @@ Dist::Zilla::Plugin::MetaData::BuiltWith = 1.004000
 Dist::Zilla::Plugin::MetaJSON = 0
 Dist::Zilla::Plugin::MetaProvides::Package = 1.14000001
 Dist::Zilla::Plugin::MetaTests = 0
-Dist::Zilla::Plugin::MetaYAML = 0
+Dist::Zilla::Plugin::MetaYAML::Minimal = 0
 Dist::Zilla::Plugin::MinimumPerl = 0
 Dist::Zilla::Plugin::PodCoverageTests = 0
 Dist::Zilla::Plugin::PodSyntaxTests = 0
@@ -215,6 +228,7 @@ Dist::Zilla::Plugin::Prereqs::Recommend::MatchInstalled = 0
 Dist::Zilla::Plugin::Prereqs::Upgrade = 0
 Dist::Zilla::Plugin::Readme::Brief = 0
 Dist::Zilla::Plugin::ReadmeAnyFromPod = 0
+Dist::Zilla::Plugin::RemovePrereqs::Provided = 0
 Dist::Zilla::Plugin::RewriteVersion::Sanitized = 0
 Dist::Zilla::Plugin::RunExtraTests = 0
 Dist::Zilla::Plugin::Test::CPAN::Changes = 0
@@ -240,32 +254,7 @@ Test::Differences = 0
 Test::TempDir::Tiny = 0
 
 [DynamicPrereqs]
--delimiter = |
--raw = |unless ( eval { ExtUtils::MakeMaker->VERSION(6.53_03) } ) {
--raw = |  *MM::_installed_file_for_module = sub {
--raw = |    my $class  = shift;
--raw = |    my $prereq = shift;
--raw = |    my $file = "$prereq.pm";
--raw = |    $file =~ s{::}{/}g;
--raw = |    my $path;
--raw = |    for my $dir (@INC) {
--raw = |      my $tmp = File::Spec->catfile($dir, $file);
--raw = |      if ( -r $tmp ) {
--raw = |        $path = $tmp;
--raw = |        last;
--raw = |      }
--raw = |    }
--raw = |    return $path;
--raw = |  }
--raw = |}
--raw = |{
--raw = |  # Avoid issue with sanity bugs and Moose penalties
--raw = |  my $module = "Dist::Zilla::App::Command::chainsmoke";
--raw = |  if ( my $path = MM->_installed_file_for_module($module) ) {
--raw = |    my $version = MM->parse_version($path) || q[0];
--raw = |    require version;
--raw = |    if ( version->parse($version) < '1.15' ) {
--raw = |      $FallbackPrereqs{$module} = $WriteMakefileArgs{PREREQ_PM}->{$module} = '1.15';
--raw = |    }
--raw = |  }
--raw = |}
+:version = 0.016
+-raw = # Avoid issue with sanity bugs and Moose penalties
+-raw = my $module = "Dist::Zilla::App::Command::chainsmoke";
+-raw = requires($module, '1.15') if has_module($module);
